<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">
        <include layout="@layout/common_title"/>


    <include layout="@layout/common_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_set_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            android:text=""
            android:textSize="16sp"
            android:textColor="#4f4f4f"/>
        <include layout="@layout/common_line"/>

        <LinearLayout
            android:id="@+id/ll_ed_password"
            style="@style/change_ll_style">

            <TextView
                style="@style/change_tv_style"
                android:text="@string/current_pd"/>
            <EditText
                android:id="@+id/tv_old_password"
                style="@style/change_et_style"
                android:hint="@string/fill_current_pd"/>
        </LinearLayout>
        <View
            android:id="@+id/current_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#d9d9d9"/>
        <LinearLayout
            android:id="@+id/ll_ed_password2"
            style="@style/change_ll_style">

            <TextView
                style="@style/change_tv_style"
                android:text="@string/new_pd"/>
            <EditText
                android:id="@+id/tv_new_password"
                style="@style/change_et_style"
                android:hint="@string/fill_new_pd"/>
        </LinearLayout>

        <include layout="@layout/common_line"/>
        <LinearLayout
            android:id="@+id/ll_again_password"
            style="@style/change_ll_style">

            <TextView
                style="@style/change_tv_style"
                android:text="@string/confirm_pd"/>
            <EditText
                android:id="@+id/et_again_password"
                style="@style/change_et_style"
                android:hint="@string/again_confirm_pd"/>
        </LinearLayout>

        <include layout="@layout/common_line"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/centhits"
            android:text="@string/pd_limit"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_forget_pd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:background="@drawable/shape_forget_pd_bg"
                android:text="@string/forget_pd"
                android:visibility="gone"/>
            <Button
                android:id="@+id/bt_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_complete_btn_bg"
                android:text="@string/confirm" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>