<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="#fff"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/seven_attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:drawableLeft="@drawable/shape_invite"/>
            <TextView
                android:id="@+id/tv_subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#b3b3b3"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/td_seven_subtitle"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_look_rule1"
            style="@style/invite_rule_tv"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#adadad"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="#fff"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/ts_seven_sttribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:drawableLeft="@drawable/shape_invite"/>
            <TextView
                android:id="@+id/tv_subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#b3b3b3"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/ts_seven_subtitle"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_look_rule2"
            style="@style/invite_rule_tv"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#adadad"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:background="#fff"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/summer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:drawableLeft="@drawable/shape_invite"/>
            <TextView
                android:id="@+id/tv_subtitle3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#b3b3b3"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/summer_title"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_look_rule3"
            style="@style/invite_rule_tv"
            />
    </LinearLayout>
</LinearLayout>