<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd" />
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context="com.tianguo.zxz.activity.STBenefitActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="收徒的好处和玩法"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="#333333"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/codetext"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="16sp"
                android:text="@string/why"
                android:lineSpacingExtra="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#adadad"/>
            <include layout="@layout/invite_rule"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#adadad"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:background="#fff"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:text="@string/invite_ff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:drawableLeft="@drawable/shape_invite"/>
                    <TextView
                        android:id="@+id/tv_subtitle4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#b3b3b3"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/invite_ff_subtitle"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_look_rule4"
                    style="@style/invite_rule_tv"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
